--- a/tanks-and-tron/MainWindow.xaml
+++ b/tanks-and-tron/MainWindow.xaml
@@ -12,7 +12,7 @@
         <Image x:Name="img_tanks" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="479" Source="/tanks.jpg"/>
         <Image x:Name="img_tron" HorizontalAlignment="Right" Height="227" Margin="370,207,0,0" VerticalAlignment="Bottom" Width="434" Source="/tron.jpg"/>
         <Button x:Name="btn_tanks" Content="Start Tanks!" HorizontalAlignment="Left" Margin="200,95,0,0" VerticalAlignment="Top" Height="29" Width="80"/>
-        <Button x:Name="btn_tron" Content="Start Tron" HorizontalAlignment="Left" Margin="506,275,0,0" VerticalAlignment="Top" Height="34" Width="77"/>
+        <Button x:Name="btn_tron" Content="Start Tron" HorizontalAlignment="Left" Margin="506,275,0,0" VerticalAlignment="Top" Height="34" Width="77" Click="btn_tron_Click"/>
         <Button x:Name="btn_sudoku" Content="Sudoku" HorizontalAlignment="Left" Margin="195,244,0,0" VerticalAlignment="Top" Height="180" Width="166" Background="#00DDDDDD" Click="btn_sudoku_Click"/>
 
     </Grid>
