--- a/tanks-and-tron/MainWindow.xaml
+++ b/tanks-and-tron/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:tanks_and_tron"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Image x:Name="img_sudoku" HorizontalAlignment="Left" Height="195" Margin="0,229,0,0" VerticalAlignment="Top" Width="207" Source="/Sudoku.png" Stretch="Uniform"/>
 
         <Image x:Name="img_tanks" HorizontalAlignment="Left" Height="230" VerticalAlignment="Top" Width="479" Source="/tanks.jpg"/>
         <Image x:Name="img_tron" HorizontalAlignment="Right" Height="227" Margin="370,207,0,0" VerticalAlignment="Bottom" Width="434" Source="/tron.jpg"/>
-        <Button x:Name="btn_tanks" Content="Start Tanks!" HorizontalAlignment="Left" Margin="200,95,0,0" VerticalAlignment="Top" Height="29" Width="80"/>
+        <Button x:Name="btn_tanks" Content="Start Tanks!" HorizontalAlignment="Left" Margin="200,95,0,0" VerticalAlignment="Top" Height="29" Width="80" Click="btn_tanks_Click_1"/>
         <Button x:Name="btn_tron" Content="Start Tron" HorizontalAlignment="Left" Margin="506,275,0,0" VerticalAlignment="Top" Height="34" Width="77" Click="btn_tron_Click"/>
         <Button x:Name="btn_sudoku" Content="Sudoku" HorizontalAlignment="Left" Margin="195,244,0,0" VerticalAlignment="Top" Height="180" Width="166" Background="#00DDDDDD" Click="btn_sudoku_Click"/>
 
