--- a/tanks-and-tron/TanksGame.xaml
+++ b/tanks-and-tron/TanksGame.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:tanks_and_tron"
         mc:Ignorable="d"
-        Title="Tanks" Height="450" Width="800" MinWidth="800" MinHeight="450" WindowStartupLocation="CenterScreen">
+        Title="Tanks" Height="450" Width="800" MinWidth="800" MinHeight="450" WindowStartupLocation="CenterScreen" MouseMove="Window_MouseMove_1">
     <Grid x:Name="MainGrid" KeyDown="MainGrid_KeyDown" Focusable="True">
         <Image x:Name="tank" HorizontalAlignment="Left" Height="50" Margin="344,195,0,0" VerticalAlignment="Top" Width="50" Source="/tank.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
@@ -27,5 +27,6 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
+        <Image x:Name="bullet" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Margin="344,195,0,0" Source="/bullet.png" Stretch="Fill"/>
     </Grid>
 </Window>
