--- a/tanks-and-tron/TanksGame.xaml
+++ b/tanks-and-tron/TanksGame.xaml
@@ -7,12 +7,7 @@
         mc:Ignorable="d"
         Title="Tanks" Height="450" Width="800" MinWidth="800" MinHeight="450" WindowStartupLocation="CenterScreen" MouseMove="Window_MouseMove_1" MouseLeftButtonDown="Window_MouseLeftButtonDown">
     <Grid x:Name="MainGrid" KeyDown="MainGrid_KeyDown" Focusable="True">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="197*"/>
-            <ColumnDefinition Width="278*"/>
-            <ColumnDefinition Width="325*"/>
-        </Grid.ColumnDefinitions>
-        <Image x:Name="tank" HorizontalAlignment="Left" Height="50"  Margin="147,195,0,0" VerticalAlignment="Top" Width="50" Source="/tank.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
+        <Image x:Name="tank" HorizontalAlignment="Left" Height="50"  Margin="147,195,0,0" VerticalAlignment="Top" Width="50" Source="/tank.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
