--- a/tanks-and-tron/TanksGame.xaml
+++ b/tanks-and-tron/TanksGame.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:tanks_and_tron"
         mc:Ignorable="d"
-        Title="Tanks" Height="450" Width="800" MinWidth="800" MinHeight="450" WindowStartupLocation="CenterScreen" MouseMove="Window_MouseMove_1" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+        Title="Tanks" Height="1080" Width="1920" MinWidth="800" MinHeight="450" WindowStartupLocation="CenterScreen" MouseMove="Window_MouseMove_1" MouseLeftButtonDown="Window_MouseLeftButtonDown" WindowState="Maximized" ResizeMode="NoResize">
     <Grid x:Name="MainGrid" KeyDown="MainGrid_KeyDown" Focusable="True">
-        <Image x:Name="tank" HorizontalAlignment="Left" Height="50"  Margin="147,195,0,0" VerticalAlignment="Top" Width="50" Source="/tank.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
+        <Image x:Name="tank" HorizontalAlignment="Left" Height="50"  Margin="300,500,0,0" VerticalAlignment="Top" Width="50" Source="/player_tank.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5" Panel.ZIndex="1">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -17,7 +17,7 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
-        <Image x:Name="cannon" HorizontalAlignment="Left" Height="50" Margin="147,195,0,0" VerticalAlignment="Top" Width="50" Source="/cannon.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
+        <Image x:Name="cannon" HorizontalAlignment="Left" Height="50" Margin="300,500,0,0" VerticalAlignment="Top" Width="50" Source="/player_cannon.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Panel.ZIndex="2">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -27,5 +27,18 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
+        <Rectangle HorizontalAlignment="Left" Height="176" Margin="0,0,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="244" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="299" Margin="0,772,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="196" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="393" Margin="1754,676,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="168" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="255" Margin="1754,-2,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="171" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="398" Margin="0,171,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="150" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="173" Margin="187,898,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="507" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="158" Margin="1806,528,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="116" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="90" Margin="1038,0,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="722" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="249" Margin="0,532,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="168" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="115" Margin="686,952,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="1078" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="295" Margin="1786,244,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="139" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="128" Margin="236,-2,0,0" Stroke="Black" Fill="gray" VerticalAlignment="Top" Width="808" StrokeThickness="10"/>
+        <Rectangle HorizontalAlignment="Center" Height="294" Stroke="Black" Fill="gray" VerticalAlignment="Center" Width="100" StrokeThickness="10"/>
     </Grid>
 </Window>
